// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SbButton UI Component renders a button with correct text 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#DC8080",
        "borderRadius": 24,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 8,
      }
    }
    testID="btn-container"
  >
    <Text
      style={
        Object {
          "color": "#F6F6F6",
          "fontFamily": "montserrat-regular",
          "fontSize": 16,
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Hello
    </Text>
  </View>
</View>
`;

exports[`SbButton UI Component renders outlined styled button 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "transparent",
        "borderColor": "#DC8080",
        "borderRadius": 24,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 8,
      }
    }
    testID="btn-container"
  >
    <Text
      style={
        Object {
          "color": "#DC8080",
          "fontFamily": "montserrat-regular",
          "fontSize": 16,
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Hello
    </Text>
  </View>
</View>
`;
